# serializer version: 1
# name: test_agg_ok[pipe_agg_group_and_order_by]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col1
              as_alias
                ident	col2
      group_by
        group_by_and_order_by
        grouping_items
          grouping_item
            ident	col3
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_cube]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col1
              as_alias
                ident	col2
      group_by
        grouping_items
          grouping_item
            cube_list
              cube_item
                ident	col3
              cube_item
                struct_literal
                  ident	col4
                  ident	col5
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_empty]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col1
              as_alias
                ident	col2
      group_by
        grouping_items
          grouping_item
            grouping_item_empty
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_grouping_sets]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col1
              as_alias
                ident	col2
      group_by
        grouping_items
          grouping_item
            grouping_set_list
              grouping_set
                ident	col3
              grouping_set
                struct_literal
                  ident	col4
                  ident	col5
              grouping_set
                ident	col6
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_grouping_sets_rollup_cube]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col1
              as_alias
                ident	col2
      group_by
        grouping_items
          grouping_item
            grouping_set_list
              grouping_set
                ident	col3
              grouping_set
                rollup_list
                  rollup_item
                    ident	col4
                  rollup_item
                    ident	col5
              grouping_set
                cube_list
                  cube_item
                    ident	col6
                  cube_item
                    ident	col7
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_multi_alias]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col1
              as_alias
                ident	col2
      group_by
        grouping_items
          grouping_item
            ident	col3
            as_alias
              ident	col4
          grouping_item
            ident	col5
            as_alias
              ident	col6
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_order_by]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col1
              as_alias
                ident	col2
      group_by
        grouping_items
          grouping_item
            ident	col3
            as_alias
              ident	col4
            order_by_item_sort	DESC
          grouping_item
            ident	col5
            as_alias
              ident	col6
            order_by_item_sort	ASC
            order_by_item_nulls	LAST
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_rollup]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col1
              as_alias
                ident	col2
      group_by
        grouping_items
          grouping_item
            rollup_list
              rollup_item
                ident	col3
              rollup_item
                ident	col4
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_single]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col1
              as_alias
                ident	col2
      group_by
        grouping_items
          grouping_item
            ident	col3
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_single_alias]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col1
              as_alias
                ident	col2
      group_by
        grouping_items
          grouping_item
            ident	col3
            as_alias
              ident	col4
  
  '''
# ---
# name: test_agg_ok[pipe_agg_multi_alias]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col1
              as_alias
                ident	col2
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col3
              as_alias
                ident	col4
  
  '''
# ---
# name: test_agg_ok[pipe_agg_order_by]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col1
              as_alias
                ident	col2
          order_by_item_sort	DESC
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col3
              as_alias
                ident	col4
          order_by_item_sort	ASC
          order_by_item_nulls	LAST
  
  '''
# ---
# name: test_agg_ok[pipe_agg_single]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col1
  
  '''
# ---
# name: test_agg_ok[pipe_agg_single_alias]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	col1
              as_alias
                ident	col2
  
  '''
# ---
# name: test_as_ok[pipe_as_single]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_as
      ident	table2
  
  '''
# ---
# name: test_call_ok[call]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_call
      function_call_expr
        function_name
          ident	APPENDS
        function_args
          pos_arg
            string_literal	'1970-01-01'
  
  '''
# ---
# name: test_call_ok[call_alias_explicit]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_call
      function_call_expr
        function_name
          ident	APPENDS
        function_args
          pos_arg
            string_literal	'1970-01-01'
      as_alias
        ident	table2
  
  '''
# ---
# name: test_call_ok[call_alias_implicit]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_call
      function_call_expr
        function_name
          ident	APPENDS
        function_args
          pos_arg
            string_literal	'1970-01-01'
      as_alias
        ident	table2
  
  '''
# ---
# name: test_join_ok[join_cross]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_join
      join_criteria	CROSS
      from_item_table
        path_expression
          ident	table2
      on_or_using_clause
        using_clause
          ident	col1
  
  '''
# ---
# name: test_join_ok[join_full]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_join
      join_criteria	FULL
      from_item_table
        path_expression
          ident	table2
      on_or_using_clause
        using_clause
          ident	col1
  
  '''
# ---
# name: test_join_ok[join_full_outer]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_join
      join_criteria
        FULL
        OUTER
      from_item_table
        path_expression
          ident	table2
      on_or_using_clause
        using_clause
          ident	col1
  
  '''
# ---
# name: test_join_ok[join_inner]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_join
      join_criteria	INNER
      from_item_table
        path_expression
          ident	table2
      on_or_using_clause
        using_clause
          ident	col1
  
  '''
# ---
# name: test_join_ok[join_left]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_join
      join_criteria	LEFT
      from_item_table
        path_expression
          ident	table2
      on_or_using_clause
        using_clause
          ident	col1
  
  '''
# ---
# name: test_join_ok[join_left_outer]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_join
      join_criteria
        LEFT
        OUTER
      from_item_table
        path_expression
          ident	table2
      on_or_using_clause
        using_clause
          ident	col1
  
  '''
# ---
# name: test_join_ok[join_on_compound_expr]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_join
      from_item_table
        path_expression
          ident	table2
      on_or_using_clause
        on_clause
          and_expr
            eq_expr
              ident	col1
              ident	col2
            ne_expr
              ident	col3
              ident	col4
  
  '''
# ---
# name: test_join_ok[join_on_single_expr]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_join
      from_item_table
        path_expression
          ident	table2
      on_or_using_clause
        on_clause
          eq_expr
            ident	col1
            ident	col2
  
  '''
# ---
# name: test_join_ok[join_right]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_join
      join_criteria	RIGHT
      from_item_table
        path_expression
          ident	table2
      on_or_using_clause
        using_clause
          ident	col1
  
  '''
# ---
# name: test_join_ok[join_right_outer]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_join
      join_criteria
        RIGHT
        OUTER
      from_item_table
        path_expression
          ident	table2
      on_or_using_clause
        using_clause
          ident	col1
  
  '''
# ---
# name: test_join_ok[join_using_multi]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_join
      from_item_table
        path_expression
          ident	table2
      on_or_using_clause
        using_clause
          ident	col1
          ident	col2
  
  '''
# ---
# name: test_join_ok[join_using_single]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_join
      from_item_table
        path_expression
          ident	table2
      on_or_using_clause
        using_clause
          ident	col1
  
  '''
# ---
# name: test_limit_ok[pipe_limit_integer_literal]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_limit
      limit_value
        integer_literal	1
  
  '''
# ---
# name: test_limit_ok[pipe_limit_offset]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_limit
      limit_value
        integer_literal	1
      offset_value
        integer_literal	2
  
  '''
# ---
# name: test_limit_ok[pipe_limit_param]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_limit
      limit_value
        parameter	limit
  
  '''
# ---
# name: test_order_by_ok[order_by_multi]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_order_by
      order_by_items
        order_by_item
          ident	col1
        order_by_item
          ident	col2
  
  '''
# ---
# name: test_order_by_ok[order_by_multi_kitchen_sink]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_order_by
      order_by_items
        order_by_item
          ident	col1
          order_by_item_sort	ASC
          order_by_item_nulls	FIRST
        order_by_item
          ident	col2
          order_by_item_sort	DESC
          order_by_item_nulls	LAST
  
  '''
# ---
# name: test_order_by_ok[order_by_multi_nulls]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_order_by
      order_by_items
        order_by_item
          ident	col1
          order_by_item_nulls	FIRST
        order_by_item
          ident	col2
          order_by_item_nulls	LAST
  
  '''
# ---
# name: test_order_by_ok[order_by_multi_sort]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_order_by
      order_by_items
        order_by_item
          ident	col1
          order_by_item_sort	ASC
        order_by_item
          ident	col2
          order_by_item_sort	DESC
  
  '''
# ---
# name: test_order_by_ok[order_by_single]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_order_by
      order_by_items
        order_by_item
          ident	col1
  
  '''
# ---
# name: test_pipe_drop_ok[pipe_drop_multi]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_drop
      drop_list
        drop_item
          ident	col1
        drop_item
          ident	col2
  
  '''
# ---
# name: test_pipe_drop_ok[pipe_drop_single]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_drop
      drop_list
        drop_item
          ident	col1
  
  '''
# ---
# name: test_pipe_drop_ok[pipe_drop_single_trailing_comma]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_drop
      drop_list
        drop_item
          ident	col1
  
  '''
# ---
# name: test_pipe_extend_ok[pipe_extend_multi]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_extend
      pipe_selection_item_list
        pipe_selection_item
          select_expr
            function_call_expr
              function_name
                ident	POW
              function_args
                pos_arg
                  ident	col1
                pos_arg
                  integer_literal	2
            as_alias
              ident	col2
        pipe_selection_item
          select_expr
            function_call_expr
              function_name
                ident	EXP
              function_args
                pos_arg
                  ident	col1
                pos_arg
                  integer_literal	2
  
  '''
# ---
# name: test_pipe_extend_ok[pipe_extend_named_window_multi]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_extend
      pipe_selection_item_list
        pipe_selection_item
          select_expr
            function_call_expr
              function_name
                ident	SUM
              function_args
                pos_arg
                  ident	col1
              window_expr
                window_spec
                  ident	w1
        pipe_selection_item
          select_expr
            function_call_expr
              function_name
                ident	SUM
              function_args
                pos_arg
                  ident	col2
              window_expr
                window_spec
                  ident	w2
      window_clause
        window_item
          ident	w1
          window_expr
            window_spec
              window_partition_by
                ident	col3
        window_item
          ident	w2
          window_expr
            window_spec
              window_partition_by
                ident	col4
  
  '''
# ---
# name: test_pipe_extend_ok[pipe_extend_named_window_single]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_extend
      pipe_selection_item_list
        pipe_selection_item
          select_expr
            function_call_expr
              function_name
                ident	SUM
              function_args
                pos_arg
                  ident	col1
              window_expr
                window_spec
                  ident	w
      window_clause
        window_item
          ident	w
          window_expr
            window_spec
              window_partition_by
                ident	col2
  
  '''
# ---
# name: test_pipe_extend_ok[pipe_extend_single]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_extend
      pipe_selection_item_list
        pipe_selection_item
          select_expr
            function_call_expr
              function_name
                ident	POW
              function_args
                pos_arg
                  ident	col1
                pos_arg
                  integer_literal	2
  
  '''
# ---
# name: test_pipe_extend_ok[pipe_extend_single_alias]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_extend
      pipe_selection_item_list
        pipe_selection_item
          select_expr
            function_call_expr
              function_name
                ident	POW
              function_args
                pos_arg
                  ident	col1
                pos_arg
                  integer_literal	2
            as_alias
              ident	col2
  
  '''
# ---
# name: test_pipe_extend_ok[pipe_extend_single_trailing_comma]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_extend
      pipe_selection_item_list
        pipe_selection_item
          select_expr
            function_call_expr
              function_name
                ident	POW
              function_args
                pos_arg
                  ident	col1
                pos_arg
                  integer_literal	2
  
  '''
# ---
# name: test_pipe_ok[pipe_from]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
  
  '''
# ---
# name: test_pipe_ok[pipe_from_select]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_list
        select_expr
          ident	col1
  
  '''
# ---
# name: test_pipe_ok[pipe_select_named_window_multi]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_list
        select_expr
          function_call_expr
            function_name
              ident	SUM
            function_args
              pos_arg
                ident	col1
            window_expr
              window_spec
                ident	w1
        select_expr
          function_call_expr
            function_name
              ident	SUM
            function_args
              pos_arg
                ident	col2
            window_expr
              window_spec
                ident	w2
      window_clause
        window_item
          ident	w1
          window_expr
            window_spec
              window_partition_by
                ident	col3
        window_item
          ident	w2
          window_expr
            window_spec
              window_partition_by
                ident	col4
  
  '''
# ---
# name: test_pipe_ok[pipe_select_named_window_reserved_conflict]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_list
        select_expr
          function_call_expr
            function_name
              ident	SUM
            function_args
              pos_arg
                ident	col1
            window_expr
              window_spec
                ident	w
      window_clause
        window_item
          ident	w
          window_expr
            window_spec
              window_partition_by
                ident	date
  
  '''
# ---
# name: test_pipe_ok[pipe_select_named_window_single]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_list
        select_expr
          function_call_expr
            function_name
              ident	SUM
            function_args
              pos_arg
                ident	col1
            window_expr
              window_spec
                ident	w
      window_clause
        window_item
          ident	w
          window_expr
            window_spec
              window_partition_by
                ident	col2
  
  '''
# ---
# name: test_pipe_ok[pipe_select_select]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	col1
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_list
        select_expr
          ident	col1
  
  '''
# ---
# name: test_pipe_ok[pipe_select_select_as_struct]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	col1
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_shape	STRUCT
      select_list
        select_expr
          ident	col1
  
  '''
# ---
# name: test_pipe_ok[pipe_select_select_as_value]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	col1
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_shape	VALUE
      select_list
        select_expr
          ident	col1
  
  '''
# ---
# name: test_pipe_ok[pipe_subquery_select]
  '''
  query_expr
    subquery
      query_expr
        select
          select_list
            select_expr
              ident	col1
          from_clause
            from_item_table
              path_expression
                ident	table1
    pipe_select
      select_list
        select_expr
          ident	col1
  
  '''
# ---
# name: test_pipe_rename_ok[pipe_rename_multi]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_rename
      rename_list
        rename_item
          ident	col1
          as_alias
            ident	col2
        rename_item
          ident	col3
          as_alias
            ident	col4
  
  '''
# ---
# name: test_pipe_rename_ok[pipe_rename_single]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_rename
      rename_list
        rename_item
          ident	col1
          as_alias
            ident	col2
  
  '''
# ---
# name: test_pipe_rename_ok[pipe_rename_single_trailing_comma]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_rename
      rename_list
        rename_item
          ident	col1
          as_alias
            ident	col2
  
  '''
# ---
# name: test_pipe_set_ok[pipe_set_multi]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set
      set_list
        set_item
          ident	col1
          function_call_expr
            function_name
              ident	POW
            function_args
              pos_arg
                ident	col1
              pos_arg
                integer_literal	2
        set_item
          ident	col2
          function_call_expr
            function_name
              ident	EXP
            function_args
              pos_arg
                ident	col1
              pos_arg
                integer_literal	2
  
  '''
# ---
# name: test_pipe_set_ok[pipe_set_single]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set
      set_list
        set_item
          ident	col1
          function_call_expr
            function_name
              ident	POW
            function_args
              pos_arg
                ident	col1
              pos_arg
                integer_literal	2
  
  '''
# ---
# name: test_pipe_set_ok[pipe_set_single_trailing_comma]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set
      set_list
        set_item
          ident	col1
          function_call_expr
            function_name
              ident	POW
            function_args
              pos_arg
                ident	col1
              pos_arg
                integer_literal	2
  
  '''
# ---
# name: test_pivot_ok[pivot]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_pivot
      pivot_clause
        function_call_expr
          function_name
            ident	SUM
          function_args
            pos_arg
              ident	col1
        ident	quarter
        pivot_value_list
          string_literal	'Q1'
          string_literal	'Q2'
  
  '''
# ---
# name: test_pivot_ok[pivot_aliased]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_pivot
      pivot_clause
        function_call_expr
          function_name
            ident	SUM
          function_args
            pos_arg
              ident	col1
        ident	quarter
        pivot_value_list
          string_literal	'Q1'
          string_literal	'Q2'
      as_alias
        ident	col2
  
  '''
# ---
# name: test_set_operation_ok[set_operation_all_single]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set_operation
      set_operation
        set_operation_kind	UNION
        set_operation_mode	ALL
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_by_name]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set_operation
      set_operation
        set_operation_kind	EXCEPT
        set_operation_mode	ALL
        set_operation_modifier_by_name
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
                    as_alias
                      ident	col1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_by_name_on_multi]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set_operation
      set_operation
        set_operation_kind	EXCEPT
        set_operation_mode	ALL
        set_operation_modifier_by_name
          set_operation_columns
            ident	col1
            ident	col2
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
                    as_alias
                      ident	col1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_by_name_on_single]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set_operation
      set_operation
        set_operation_kind	EXCEPT
        set_operation_mode	ALL
        set_operation_modifier_by_name
          set_operation_columns
            ident	col1
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
                    as_alias
                      ident	col1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_corresponding]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set_operation
      set_operation
        set_operation_kind	UNION
        set_operation_mode	ALL
        set_operation_modifier_corresponding
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
                    as_alias
                      ident	col1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_distinct_multi]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set_operation
      set_operation
        set_operation_kind	INTERSECT
        set_operation_mode	DISTINCT
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	2
  
  '''
# ---
# name: test_set_operation_ok[set_operation_strict_corresponding]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set_operation
      set_operation
        set_operation_kind	UNION
        set_operation_mode	ALL
        set_operation_modifier_strict_corresponding
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
                    as_alias
                      ident	col1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_strict_corresponding_by]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set_operation
      set_operation
        set_operation_kind	EXCEPT
        set_operation_mode	ALL
        set_operation_modifier_strict_corresponding
          set_operation_columns
            ident	col1
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
                    as_alias
                      ident	col1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_with_criteria_full]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set_operation
      set_operation_with_criteria
        set_operation_criteria	FULL
        set_operation_kind	UNION
        set_operation_mode	ALL
        set_operation_modifier_by_name
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
                    as_alias
                      ident	col1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_with_criteria_inner]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set_operation
      set_operation_with_criteria
        set_operation_criteria	INNER
        set_operation_kind	UNION
        set_operation_mode	ALL
        set_operation_modifier_by_name
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
                    as_alias
                      ident	col1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_with_criteria_left]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set_operation
      set_operation_with_criteria
        set_operation_criteria	LEFT
        set_operation_kind	UNION
        set_operation_mode	ALL
        set_operation_modifier_by_name
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
                    as_alias
                      ident	col1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_with_criteria_left_outer]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_set_operation
      set_operation_with_criteria
        set_operation_criteria
          LEFT
          OUTER
        set_operation_kind	UNION
        set_operation_mode	ALL
        set_operation_modifier_by_name
        set_operation_list
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
                    as_alias
                      ident	col1
  
  '''
# ---
# name: test_tablesample_ok[tablesample]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_tablesample
      tablesample_perc
        integer_literal	10
  
  '''
# ---
# name: test_unpivot_ok[unpivot]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_unpivot
      unpivot_clause
        unpivot_values_column
          ident	col1
        unpivot_name_column
          ident	quarter
        unpivot_column_list
          ident	q1
          ident	q2
  
  '''
# ---
# name: test_unpivot_ok[unpivot_aliased]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_unpivot
      unpivot_clause
        unpivot_values_column
          ident	col1
        unpivot_name_column
          ident	quarter
        unpivot_column_list
          ident	q1
          ident	q2
      as_alias
        ident	col2
  
  '''
# ---
# name: test_where_ok[pipe_where_single]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_where
      ident	col1
  
  '''
# ---
# name: test_window_ok[window_frame_range]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_list
        select_expr
          function_call_expr
            function_name
              ident	SUM
            function_args
              pos_arg
                ident	col1
            window_expr
              window_spec
                window_frame
                  window_frame_kind	RANGE
                  window_frame_between
                    window_frame_between_numeric_preceding
                      window_frame_numeric_preceding
                        integer_literal	1
                      window_frame_numeric_following
                        integer_literal	1
  
  '''
# ---
# name: test_window_ok[window_frame_rows]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_list
        select_expr
          function_call_expr
            function_name
              ident	SUM
            function_args
              pos_arg
                ident	col1
            window_expr
              window_spec
                window_frame
                  window_frame_kind	ROWS
                  window_frame_between
                    window_frame_between_unbounded_preceding
                      window_frame_unbounded_preceding
                      window_frame_unbounded_following
  
  '''
# ---
# name: test_window_ok[window_order_by_multi]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_list
        select_expr
          function_call_expr
            function_name
              ident	SUM
            function_args
              pos_arg
                ident	col1
            window_expr
              window_spec
                window_order_by
                  order_by_items
                    order_by_item
                      ident	col2
                    order_by_item
                      ident	col3
  
  '''
# ---
# name: test_window_ok[window_order_by_single]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_list
        select_expr
          function_call_expr
            function_name
              ident	SUM
            function_args
              pos_arg
                ident	col1
            window_expr
              window_spec
                window_order_by
                  order_by_items
                    order_by_item
                      ident	col2
  
  '''
# ---
# name: test_window_ok[window_parition_and_order_by]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_list
        select_expr
          function_call_expr
            function_name
              ident	SUM
            function_args
              pos_arg
                ident	col1
            window_expr
              window_spec
                window_partition_by
                  ident	col2
                window_order_by
                  order_by_items
                    order_by_item
                      ident	col3
  
  '''
# ---
# name: test_window_ok[window_partition_by_multi]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_list
        select_expr
          function_call_expr
            function_name
              ident	SUM
            function_args
              pos_arg
                ident	col1
            window_expr
              window_spec
                window_partition_by
                  ident	col2
                  ident	col3
  
  '''
# ---
# name: test_window_ok[window_partition_by_single]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_list
        select_expr
          function_call_expr
            function_name
              ident	SUM
            function_args
              pos_arg
                ident	col1
            window_expr
              window_spec
                window_partition_by
                  ident	col2
  
  '''
# ---
# name: test_window_ok[window_simple]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
    pipe_select
      select_list
        select_expr
          function_call_expr
            function_name
              ident	SUM
            function_args
              pos_arg
                ident	col1
            window_expr
              window_spec
  
  '''
# ---
